--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,77 @@
 
 /* Declare Variables */
 :root {
-    
+    --page-background-color: #FFFFFF;
+    --wrapper-color: #F8476C;
+    --voucher-color: #E4E7E4;
+    --main-font-color: #000000;
+    --light-font-color: #D3D3D3;
 }
 
 /* Global Reset */
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: var(--page-background-color);
+}
+
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 3.5rem;
+}
+
+.voucher-unwrap {
+    height: 120px;
+    width: 400px;
+    background-color: var(--wrapper-color);
+    border: solid 0.1rem var(--main-font-color);
+    border-radius: 0.5rem;
+}
+
+.voucher-front {
+    height: 120px;
+    width: 400px;
+    background-color: var(--voucher-color);
+    border: solid 0.1rem var(--main-font-color);
+    border-radius: 0.5rem;
+    position: absolute;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 400px;
+    grid-template-rows: 60px 60px;
+}
+
+.voucher-front img {
+    width: 12%;
+}
+
+.voucher-front p:first-child {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+.voucher-front p:last-child {
+    font-family: 'Esteban', serif;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.voucher-back {
+    height: 120px;
+    width: 400px;
+    background-color: var(--voucher-color);
+    border: solid 0.1rem var(--main-font-color);
+    border-radius: 0.5rem;
+    position: absolute;
+    z-index: 0;
 }
