--- a/css/style.css
+++ b/css/style.css
@@ -26,52 +26,147 @@ body {
 
 h1 {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
+    font-weight: 200;
     font-size: 3.5rem;
+    margin-bottom: 100px;
 }
 
+.voucher-container {
+
+    /* position: relative;
+
+    transition: transform 1.5s;
+    transform-style: preserve-3d; */
+}
+
+
 .voucher-unwrap {
-    height: 120px;
+    height: 140px;
     width: 400px;
     background-color: var(--wrapper-color);
     border: solid 0.1rem var(--main-font-color);
     border-radius: 0.5rem;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.voucher-unwrap p {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 1.5rem;
 }
 
 .voucher-front {
-    height: 120px;
+    height: 140px;
     width: 400px;
     background-color: var(--voucher-color);
     border: solid 0.1rem var(--main-font-color);
     border-radius: 0.5rem;
-    position: absolute;
+
+    /* position: absolute;
     z-index: 1;
+
+    backface-visibility: hidden; */
+
     display: grid;
-    grid-template-columns: 400px;
-    grid-template-rows: 60px 60px;
+    grid-template-columns: 100px 100px 100px 100px;
+    grid-template-rows: 70px 70px;
+    align-items: center;
 }
 
 .voucher-front img {
-    width: 12%;
+    width: 60%;
+    margin: 5px;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    align-self: center;
+    justify-self: center;
 }
 
-.voucher-front p:first-child {
+.voucher-front :nth-child(2) {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    align-self: center;
+    justify-self: center;
 }
-.voucher-front p:last-child {
+.voucher-front :nth-child(3) {
     font-family: 'Esteban', serif;
     font-weight: 400;
     font-size: 1rem;
+    grid-column: 1 / 5;
+    grid-row: 2 / 3;
+    align-self: center;
+    justify-self: center;
 }
 
 .voucher-back {
-    height: 120px;
+    height: 140px;
     width: 400px;
     background-color: var(--voucher-color);
     border: solid 0.1rem var(--main-font-color);
     border-radius: 0.5rem;
-    position: absolute;
-    z-index: 0;
+
+    /* position: absolute;
+    z-index: 2;
+
+    transform: rotateX(180deg);
+    backface-visibility: hidden; */
+
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px;
+    grid-template-rows: 40px 60px 40px;
+}
+
+/* nth child 1-6 */
+
+.voucher-back :nth-child(1) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    align-self: center;
+    justify-self: center;
+}
+.voucher-back :nth-child(2) {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    align-self: center;
+    justify-self: center;
+}
+.voucher-back :nth-child(3) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    align-self: center;
+    justify-self: center;
+}
+.voucher-back :nth-child(4) {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+    align-self: center;
+    justify-self: center;
+}
+.voucher-back :nth-child(5) {
+    padding: 10px;
+    font-size: 1rem;
+    grid-column: 1 / 5;
+    grid-row: 2 / 3;
+    align-self: center;
+    justify-self: center;
+}
+
+.voucher-back :nth-child(5) span {
+    font-weight: bold;
+}
+
+
+.voucher-back :nth-child(6) {
+    color: var(--light-font-color);
+    grid-column: 1 / 5;
+    grid-row: 3 / 4;
+    align-self: center;
+    justify-self: center;
 }
