--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,11 @@ h1 {
 }
 
 .voucher-container {
-
-    /* position: relative;
-
-    transition: transform 1.5s;
-    transform-style: preserve-3d; */
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 1.5s ease-in-out;
+    perspective: 800px;
 }
-
 
 .voucher-unwrap {
     height: 140px;
@@ -66,15 +64,18 @@ h1 {
     border: solid 0.1rem var(--main-font-color);
     border-radius: 0.5rem;
 
-    /* position: absolute;
-    z-index: 1;
-
-    backface-visibility: hidden; */
+    position: absolute;
 
     display: grid;
     grid-template-columns: 100px 100px 100px 100px;
     grid-template-rows: 70px 70px;
     align-items: center;
+}
+
+.is-flipped {
+    transform: rotateX(180deg);
+    transition: transform 1.5s ease-in-out;
+    transform-style: preserve-3d;
 }
 
 .voucher-front img {
@@ -112,11 +113,8 @@ h1 {
     border: solid 0.1rem var(--main-font-color);
     border-radius: 0.5rem;
 
-    /* position: absolute;
-    z-index: 2;
-
     transform: rotateX(180deg);
-    backface-visibility: hidden; */
+    backface-visibility: hidden;
 
     display: grid;
     grid-template-columns: 100px 100px 100px 100px;
@@ -124,7 +122,6 @@ h1 {
 }
 
 /* nth child 1-6 */
-
 .voucher-back :nth-child(1) {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -161,7 +158,6 @@ h1 {
 .voucher-back :nth-child(5) span {
     font-weight: bold;
 }
-
 
 .voucher-back :nth-child(6) {
     color: var(--light-font-color);
